src/objects/Cases__c.object
<CustomObject>
    <description>Customer Service Cases</description>
    <fields>
        <fullName>Account_2__c</fullName>
        <label>Account 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Product</label>
        <referenceTo>Account_Product__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Products_List__c</fullName>
        <label>Account Products List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_Resolution__c</fullName>
        <label>Account Resolution</label>
        <picklist>
            <picklistValues>
                <fullName>Cancellation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pause</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Save</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Christmas Special</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alter Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saved to SEO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Account_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Resolution__c</fullName>
        <label>Billing Resolution</label>
        <picklist>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Business Ownership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Move To SLX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Move To GMT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alter Product</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Cancel_by__c</fullName>
        <label>Cancel by</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancellation_Date__c</fullName>
        <label>Cancellation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancelled_Revenue__c</fullName>
        <label>Cancelled Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CaseOwnerRole__c</fullName>
        <formula>Owner:User.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CaseOwnerRole</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseType__c</fullName>
        <label>Case Type</label>
        <picklist>
            <picklistValues>
                <fullName>Other Problem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancellation</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domain Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hosting Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pause</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reassign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resume</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Christmas Special</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationship Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holiday Discount</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Case_Closed_Date__c</fullName>
        <label>Case Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Case_Open_Time__c</fullName>
        <formula>ROUND(8*( 
(5*FLOOR((DATEVALUE(NOW())-DATE(1996,01,01))/7) + 
MIN(5, 
MOD(DATEVALUE(NOW())-DATE(1996,01,01), 7) + 
MIN(1, 24/8*(MOD(NOW() -DATETIMEVALUE(&apos;1996-01-01 22:00:00&apos;), 1))) 
)) 
- 
(5*FLOOR((DATEVALUE(escalated_date__c)-DATE(1996,01,01))/7) + 
MIN(5, 
MOD(DATEVALUE(escalated_date__c)-DATE(1996,01,01), 7) + 
MIN(1, 24/8*(MOD(escalated_date__c-DATETIMEVALUE(&apos;1996-01-01 22:00:00&apos;), 1))) 
)) 
), 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Open Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Origin__c</fullName>
        <label>Case Origin</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Reason__c</fullName>
        <description>Please provide as much info as possible</description>
        <label>Case Reason</label>
        <picklist>
            <picklistValues>
                <fullName>BTS:Act of God</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BTS:Issues re SLX or Google Fees/Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BTS:Signup not compl by Decision maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BTS:Technical/Legal/Industry std issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>----------------------------------------</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales: Sold to other products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales: Client referred a client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales: Sold to pause</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales: Relationship Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales: Alter billing method</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales: EOM discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales: Holiday Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-----------------------------------------</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CM: Bad reassign from last CM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CM: Didn&apos;t see account was down</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CM: Forced Pause</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CM: Insufficient contact with client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CM: Pause Extension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CM: Lack of ROI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CM: Resume off pause - now cancelling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CM: CM error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CM          - Tech issue (Scripts not running)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CM - Poor Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CM Error - Google billing down 2+ weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CM Error - 3+ SLX invoices unpaid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CM Error - Agreed work not completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CM Error - Insufficient Contact With Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CM Error - Save Strat Not Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>---------------------------------------</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client:Bad site, said no to landing page</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Case_Resolution__c</fullName>
        <label>Case Resolution</label>
        <picklist>
            <picklistValues>
                <fullName>Cancellation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pause</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Save</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reassign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Christmas Special</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Case_Response_Time__c</fullName>
        <description>The duration from when the case is escalated to the first successful response.</description>
        <formula>ROUND(8*( 
(5*FLOOR((DATEVALUE(First_Success_Call__c)-DATE(1996,01,01))/7) + 
MIN(5, 
MOD(DATEVALUE(First_Success_Call__c)-DATE(1996,01,01), 7) + 
MIN(1, 24/8*(MOD(First_Success_Call__c-DATETIMEVALUE(&apos;1996-01-01 22:00:00&apos;), 1))) 
)) 
- 
(5*FLOOR((DATEVALUE(escalated_date__c)-DATE(1996,01,01))/7) + 
MIN(5, 
MOD(DATEVALUE(escalated_date__c)-DATE(1996,01,01), 7) + 
MIN(1, 24/8*(MOD(escalated_date__c-DATETIMEVALUE(&apos;1996-01-01 22:00:00&apos;), 1))) 
)) 
), 2)</formula>
        <inlineHelpText>The duration from when the case is escalated to the first successful response.</inlineHelpText>
        <label>Case Response Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_Manager1__c</fullName>
        <label>Client Manager1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Manager_Reassign__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client Manager Reassign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <label>Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitor</label>
        <referenceTo>Competitor__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Amount__c</fullName>
        <description>Total Credit amount</description>
        <label>Credit Request Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Invoices_End_Date__c</fullName>
        <label>Credit Invoices End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Invoices_List__c</fullName>
        <label>Credit Invoices List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Credit_Invoices_Start_Date__c</fullName>
        <label>Credit Invoices Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Daily_Budget__c</fullName>
        <description>Current AdWords Daily Budget</description>
        <label>Daily Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Downgrade_Amount__c</fullName>
        <description>Please specify the downgrade amount.</description>
        <inlineHelpText>Please specify the downgrade amount.</inlineHelpText>
        <label>Downgrade Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Downgrade_Difference__c</fullName>
        <formula>if(Downgrade_Amount__c==0, 0,Account_Product__r.Product_Price__c - Downgrade_Amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Downgrade Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Downgrade__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Downgrade</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Final_Action_Timestamp__c</fullName>
        <label>Final_Action_Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Success_Call__c</fullName>
        <description>The timestamp of the first outbound call which duration longer than 30s in related to the case</description>
        <inlineHelpText>The timestamp of the first outbound call which duration longer than 30s in related to the case</inlineHelpText>
        <label>First Success Call</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Have_Confirmed_to_Turn_Off_AdWords_Acct__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If client would like Adwords account turned off</inlineHelpText>
        <label>Have Confirmed to Turn Off AdWords Acct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>If_no_please_explain__c</fullName>
        <label>If no please explain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Comments__c</fullName>
        <label>Internal Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Latest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Latest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Num_Of_Calls__c</fullName>
        <inlineHelpText>Number of calls the sales team member had involved (made or received)</inlineHelpText>
        <label>Num Of Calls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_Of_Emails__c</fullName>
        <inlineHelpText>Number of emails the sales team member had done</inlineHelpText>
        <label>Num Of Emails</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offered_1_Weeks_Free_Management__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Offered 1 Weeks Free Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Offered_2_Weeks_Free_Management__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Offered 2 Weeks Free Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Offered_Credit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Offered Credit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Offered_Senior_Client_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Offered Senior Client Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Role__c</fullName>
        <formula>CaseOwnerRole__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pause_by__c</fullName>
        <label>Pause by</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Potential_Winbacks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Potential Winbacks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
                <color>#0B6FCE</color>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
                <color>#FF9900</color>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
                <color>#CC0000</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Processed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Processed By</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>SLX Client Team Manager</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>SLX Client Operations Manager</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Processing_Time__c</fullName>
        <formula>ROUND(8*( 
(5*FLOOR((DATEVALUE(unresolved_date__c)-DATE(1996,01,01))/7) + 
MIN(5, 
MOD(DATEVALUE(unresolved_date__c)-DATE(1996,01,01), 7) + 
MIN(1, 24/8*(MOD(unresolved_date__c -DATETIMEVALUE(&apos;1996-01-01 22:00:00&apos;), 1))) 
)) 
- 
(5*FLOOR((DATEVALUE(escalated_date__c)-DATE(1996,01,01))/7) + 
MIN(5, 
MOD(DATEVALUE(escalated_date__c)-DATE(1996,01,01), 7) + 
MIN(1, 24/8*(MOD(escalated_date__c-DATETIMEVALUE(&apos;1996-01-01 22:00:00&apos;), 1))) 
)) 
), 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Processing Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Active_Days__c</fullName>
        <formula>Account_Product__r.Active_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Active Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <formula>Account_Product__r.Product_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reassign_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reassign To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Refund_Amount__c</fullName>
        <description>Total Refund Amount</description>
        <label>Refund Request Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Refund_Invoices_End_Date__c</fullName>
        <label>Refund Invoices End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Refund_Invoices_List__c</fullName>
        <label>Refund Invoices List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Refund_Invoices_Start_Date__c</fullName>
        <label>Refund Invoices Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Resolution_Manager_Notes__c</fullName>
        <label>Resolution Manager Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Resolution_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resolution Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SEO_Package__c</fullName>
        <label>SEO Package</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Person__c</fullName>
        <formula>Account__r.Sales_Person__r.Name</formula>
        <label>Sales Person</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Save_Date__c</fullName>
        <label>Saved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Saved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Saved By</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>Client</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Saved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Saved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Saved_by_Role__c</fullName>
        <formula>Saved_By__r.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Saved by Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <label>Solution</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <color>#0B6FCE</color>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Escalated</fullName>
                <color>#CC0000</color>
            </picklistValues>
            <picklistValues>
                <fullName>Unresolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Call_Duration__c</fullName>
        <description>Total Call Duration in last 3 weeks from escalated time</description>
        <inlineHelpText>Total Call Duration in last 3 weeks from escalated time</inlineHelpText>
        <label>Total Call Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unresolved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unresolved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unresolved_by_Role__c</fullName>
        <formula>Unresolved_By__r.UserRole.Name</formula>
        <label>Unresolved by Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Waiver_Request_Amount__c</fullName>
        <label>Waiver Request Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2012_2_Weeks_Notice_to_be_applied__c</fullName>
        <description>2 weeks&apos; notice to be applied?</description>
        <inlineHelpText>Please specify how many weeks&apos; notice is required. (For cancellations only)</inlineHelpText>
        <label>2 Weeks&apos; Notice to be applied?</label>
        <picklist>
            <picklistValues>
                <fullName>2 weeks&apos; notice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 week&apos;s notice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0 weeks&apos; notice</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X2012_Action_Taken_to_Save__c</fullName>
        <defaultValue>&quot;If you have attempted to save the client, please detail your save strategy.&quot;</defaultValue>
        <description>Action Taken to Save</description>
        <inlineHelpText>If you have attempted to save the client, please detail your save strategy.</inlineHelpText>
        <label>Action Taken to Save</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X2012_CM_Comments__c</fullName>
        <defaultValue>&quot;Please enter your comments regarding the case.&quot;</defaultValue>
        <description>CM Comments</description>
        <inlineHelpText>Please enter any comments regarding the case.</inlineHelpText>
        <label>CM Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X2012_CM_Proposed_Action__c</fullName>
        <defaultValue>&quot;Please enter your proposed action to resolve this case.&quot;</defaultValue>
        <description>CM Proposed Action</description>
        <inlineHelpText>Please enter your proposed action to resolve this case.</inlineHelpText>
        <label>CM Proposed Action</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X2012_Cancellation_Waiver_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Cancellation Waiver Requested by CM?</description>
        <label>Cancellation Waiver Requested by CM?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2012_Cancellation_Waiver_approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Cancellation Waiver approved?</description>
        <inlineHelpText>To be approved by Client Operations Manager.</inlineHelpText>
        <label>Cancellation Waiver approved?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2012_E_mail_or_Phone_Summary__c</fullName>
        <defaultValue>&quot;Please enter a transcript of the customer&apos;s complaint.&quot;</defaultValue>
        <description>E-mail or Phone Summary</description>
        <inlineHelpText>Please enter a transcript of the customer&apos;s complaint.</inlineHelpText>
        <label>E-mail or Phone Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X2012_Final_Action_FOR_MANAGERS__c</fullName>
        <defaultValue>&quot;***For Team Managers to complete.***&quot;</defaultValue>
        <description>Final Action</description>
        <inlineHelpText>Please enter the final action for Accounts to complete.</inlineHelpText>
        <label>Final Action (FOR MANAGERS)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X2012_Original_Request_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Original Request Date</description>
        <inlineHelpText>Please enter the original date that the client raised the issue.</inlineHelpText>
        <label>Original Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X2012_Refund_Invoice_s__c</fullName>
        <description>Refund Invoice(s)</description>
        <inlineHelpText>Please enter the Invoice Numbers to be refunded.</inlineHelpText>
        <label>Refund Invoice(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2012_Related_to_previous_case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related to previous case</description>
        <inlineHelpText>Please enter any related cases.</inlineHelpText>
        <label>Related to previous case</label>
        <referenceTo>Cases__c</referenceTo>
        <relationshipLabel>Related to previous case</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X2012_Void_Invoice_s__c</fullName>
        <description>Void Invoice(s)</description>
        <inlineHelpText>Please enter the Invoice Numbers to be voided.</inlineHelpText>
        <label>Void Invoice(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2012_Website_URL__c</fullName>
        <defaultValue>&quot;http://&quot;</defaultValue>
        <description>Website URL</description>
        <inlineHelpText>Please enter the exact URL of your client&apos;s website.</inlineHelpText>
        <label>Website URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>escalated_date__c</fullName>
        <description>The datetime when case was changed to escalated.</description>
        <label>Escalated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>unresolved_date__c</fullName>
        <description>the date when case was changed to unresolved</description>
        <label>Unresolved Date</label>
        <type>DateTime</type>
    </fields>
</CustomObject>